--- a/src/scss/modals/_register.scss
+++ b/src/scss/modals/_register.scss
@@ -1,4 +1,11 @@
-.login-inner {
+.register-wrapper {
+	@include hidden;
+	&.-show {
+		@include visible;
+	}
+}
+
+.register-inner {
 	@include abs-center;
 	@include flex-center;
 	width: 100%;
@@ -6,7 +13,7 @@
 	background: $white;
 	padding-block: 56px;
 	position: relative;
-	height: 570px;
+	height: 670px;
 	overflow: auto;
 	@include breakpoint-down(tablet) {
 		flex-direction: column;
@@ -69,40 +76,38 @@
 
 .form-register-inner {
 	@include flex-column;
+	gap: 32px;
 	width: 40%;
 	@include breakpoint-down(tablet) {
 		width: 90%;
 	}
 
-	.field {
+	.item {
 		@include flex-column;
-		margin-bottom: 24px;
-		> .label {
+		> label {
 			color: $black;
 			font-size: $fz-xs;
 			line-height: $leading-sm;
 			color: $brown-color;
 		}
-		> .input {
+		> input {
 			color: $black;
 			font-size: $fz-sm;
 			padding-block: 8px;
 			border-bottom: 0.5px solid $black;
 		}
-		> .alert {
-			font-size: $fz-xs;
-			line-height: $leading-sm;
-			color: $brown-color;
-			text-align: left;
-			font-weight: 500;
-			margin-top: 8px;
-		}
+	}
+	> .alert {
+		font-size: $fz-xs;
+		line-height: $leading-sm;
+		color: $brown-color;
+		text-align: left;
+		font-weight: 500;
 	}
 	> .notice {
 		color: $black;
 		font-size: 11px;
 		line-height: 15px;
-		margin-bottom: 16px;
 		> * {
 			font-weight: $fw-bold;
 			text-decoration: underline;
@@ -116,7 +121,6 @@
 .btn-open-modal {
 	color: $black;
 	font-size: $fz-xs;
-	margin-top: 16px;
 	text-decoration-line: underline;
 	font-weight: $fw-bold;
 }
