--- a/src/scss/abstracts/_helper.scss
+++ b/src/scss/abstracts/_helper.scss
@@ -64,3 +64,18 @@
 	font-weight: $fw-normal;
 	color: $error-color;
 }
+
+._custom-scrollbar {
+	&::-webkit-scrollbar {
+		width: 7px;
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: transparent;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background: #d9d9d9;
+		border-radius: 5px;
+	}
+}
