fix UI modal register

--- a/src/scss/modals/_register.scss
+++ b/src/scss/modals/_register.scss
@@ -22,6 +22,9 @@
 		height: 100vh;
 		max-width: 100%;
 	}
+	@include breakpoint-down(phone) {
+		padding-top: 200px;
+	}
 	> .icon {
 		position: absolute;
 		top: 20px;
