--- a/src/scss/components/_products.scss
+++ b/src/scss/components/_products.scss
@@ -20,14 +20,13 @@
 	> .product-list {
 		> .item > .desc {
 			color: $dark;
-
 			> .name {
 				font-size: $fz-base;
 				line-height: $leading-sm;
-				margin-block: 12px;
+				margin-bottom: 12px;
 				@include breakpoint-down(phone) {
 					font-size: $fz-sm;
-					margin-block: 6px;
+					margin-block: 3px;
 				}
 			}
 			> .new-price {
@@ -41,7 +40,6 @@
 
 .product {
 	> .image > .image-item {
-		margin-bottom: 12px;
 	}
 	> .desc {
 		color: $dark;
@@ -50,7 +48,7 @@
 		> .name {
 			font-size: $fz-base;
 			line-height: $leading-sm;
-			margin-block: 3px;
+			margin-bottom: 3px;
 			@include breakpoint-down(phone) {
 				font-size: $fz-sm;
 			}
@@ -58,7 +56,7 @@
 		> .new-price {
 			font-size: $fz-sm;
 			line-height: $leading-sm;
-			font-weight: 600;
+			font-weight: $fw-bold;
 		}
 		> .sale {
 			font-size: $fz-xs;
