--- a/src/scss/components/_skeleton-category.scss
+++ b/src/scss/components/_skeleton-category.scss
@@ -1,15 +1,21 @@
-.loading-skeleton {
+.loading-skeleton-category {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	gap: 32px;
 }
 
-.card.is-loading {
+.loading-skeleton-product {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 24px;
+}
+
+.card-is-loading {
 	.image,
 	h2,
 	p {
-		background: #eee;
-		background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
+		background: #f8f6f6;
+		background: linear-gradient(110deg, #ececec 4%, #f5f5f5 18%, #ececec 33%);
 		border-radius: 5px;
 		background-size: 200% 100%;
 		animation: 1.5s shine linear infinite;
@@ -17,6 +23,9 @@
 
 	.image {
 		height: 330px;
+		@include breakpoint-down(smalldesktop) {
+			height: 200px;
+		}
 	}
 
 	h2 {
