--- a/src/scss/abstracts/_helper.scss
+++ b/src/scss/abstracts/_helper.scss
@@ -65,6 +65,18 @@
 	color: $error-color;
 }
 
+.error-message-sever {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 60px 0px;
+	font-family: $heading-font;
+	font-size: 64px;
+	line-height: $leading-sm;
+	font-weight: $fw-normal;
+	color: $error-color;
+}
+
 ._custom-scrollbar {
 	&::-webkit-scrollbar {
 		width: 7px;
