--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -71,7 +71,7 @@
 	line-height: $leading-sm;
 	width: 100%;
 	color: $primary-color;
-	> span {
+	> p {
 		text-transform: capitalize;
 		font-weight: $fw-bold;
 		margin-left: 4px;
