--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -245,7 +245,7 @@
 				font-size: $fz-sm;
 				line-height: $leading-sm;
 			}
-			> .desc span {
+			> .desc p {
 				font-weight: $fw-bold;
 			}
 		}
