--- a/src/scss/components/_button-link.scss
+++ b/src/scss/components/_button-link.scss
@@ -1,6 +1,14 @@
 .site-button-link {
 	position: relative;
 	color: $white;
+	transition: all 0.2s ease-in;
+	@mixin generate-button-color($color, $text-color: $white) {
+		background: $color;
+		color: $text-color !important;
+		&:hover {
+			background: rgba($color, 0.8);
+		}
+	}
 	&::before {
 		@include transition;
 		position: absolute;
@@ -13,5 +21,15 @@
 	}
 	&:hover::before {
 		bottom: -6px;
+	}
+	&.-primary {
+	}
+
+	&.-secondary {
+		@include generate-button-color($secondary-color, $white);
+	}
+	&.-three {
+		@include generate-button-color($primary-color, $white);
+		padding: 12px 16px;
 	}
 }
