--- a/src/scss/layout/bag-cart.scss
+++ b/src/scss/layout/bag-cart.scss
@@ -117,7 +117,7 @@
 				margin-top: 4px;
 				margin-bottom: 24px;
 			}
-			> .sub-title > span {
+			> .sub-title > p {
 				font-weight: $fw-bold;
 			}
 		}
