--- a/src/scss/layout/header-mobile.scss
+++ b/src/scss/layout/header-mobile.scss
@@ -57,6 +57,7 @@
 
 .action_list {
 	@include flex-column;
+	justify-content: flex-start;
 	gap: 24px;
 	padding: 30px 40px;
 	text-align: left;
@@ -66,6 +67,7 @@
 		color: $brown-color;
 		line-height: $leading-md;
 		font-weight: 500;
+		text-align: left;
 	}
 }
 
