--- a/src/scss/pages/_page-order.scss
+++ b/src/scss/pages/_page-order.scss
@@ -53,7 +53,7 @@
 			line-height: $leading-sm;
 		}
 
-		> span:last-child {
+		> p:last-child {
 			color: $black;
 		}
 	}
@@ -170,7 +170,7 @@
 			> .total {
 				@include flex-center-ver;
 				gap: 20px;
-				> span {
+				> p {
 					color: $black;
 					font-size: $fz-base;
 					line-height: $leading-sm;
