--- a/src/scss/pages/_page-products.scss
+++ b/src/scss/pages/_page-products.scss
@@ -1,5 +1,7 @@
 .products-wrapper {
 	display: flex;
+	align-items: flex-start;
+	justify-content: flex-start;
 	gap: 16px;
 	margin-top: 16px;
 	@include breakpoint-down(smalldesktop) {
