handle favorite post delete get data

--- a/src/scss/pages/_page-favorite.scss
+++ b/src/scss/pages/_page-favorite.scss
@@ -131,6 +131,7 @@
 						justify-content: space-between;
 						margin-top: 6px;
 						font-size: $fz-xs;
+						font-weight: $fw-bold;
 						> .icon {
 							font-size: 24px;
 							display: none;
