--- a/src/scss/pages/_page_your_order.scss
+++ b/src/scss/pages/_page_your_order.scss
@@ -1,62 +1,57 @@
-table {
-	width: 100%;
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-th,
-td {
-	padding: 12px;
-	text-align: left;
-	border-bottom: 1px solid #ddd;
+.order-information {
+	@include flex-column;
+	gap: 12px;
+	padding: 20px;
+	border: 1px solid $brown-light-color;
+	width: max-content;
+	@include breakpoint-down(smalldesktop) {
+		width: 100%;
+	}
+	> h4 {
+		font-size: $fz-base;
+		text-transform: uppercase;
+		line-height: $leading-sm;
+		color: $black;
+		font-weight: $fw-bold;
+		margin-bottom: 8px;
+		font-family: $heading-font;
+		@include breakpoint-down(smalldesktop) {
+			font-size: $fz-sm;
+		}
+	}
+	> p {
+		font-weight: $fw-bold;
+		> span {
+			font-weight: $fw-normal;
+		}
+	}
 	.btn {
-		cursor: pointer;
-		padding: 10px 20px;
-		background-color: $error-color !important;
-		transition: background-color 0.3s ease;
+		width: max-content;
+		background-color: $error-color;
+		text-align: center;
 		&:hover {
-			background: rgba($error-color, 0.8);
+			background: rgba($color: $error-color, $alpha: 0.8);
 		}
 	}
 }
 
-th {
-	background-color: #c41320;
-	color: #fff;
-}
-
-tr:nth-child(even) {
-	background-color: #fff;
-	color: #333;
-}
-
-@media screen and (max-width: 600px) {
-	table {
-		border: 0;
-	}
-
-	th,
-	td {
-		display: block;
-		width: 100%;
-		border-bottom: none;
-	}
-
-	thead {
-		display: none;
-	}
-
-	tr {
-		margin-bottom: 10px;
-	}
-
-	td:before {
-		content: attr(data-label);
-		display: block;
-		font-weight: bold;
+.order-list-items {
+	@include flex-column;
+	gap: 20px;
+	margin-top: 50px;
+	> h4 {
+		font-size: $fz-base;
+		text-transform: uppercase;
+		line-height: $leading-sm;
+		color: $black;
+		font-weight: $fw-bold;
+		margin-bottom: 20px;
+		font-family: $heading-font;
+		@include breakpoint-down(smalldesktop) {
+			font-size: $fz-sm;
+		}
 	}
 }
-
 // item order
 .order-item {
 	@include flex-center;
@@ -65,6 +60,7 @@ tr:nth-child(even) {
 		cursor: pointer;
 	}
 	> .desc {
+		@include flex-column;
 		font-size: $fz-base;
 		line-height: $leading-sm;
 		color: $black;
@@ -74,11 +70,19 @@ tr:nth-child(even) {
 			font-size: $fz-sm;
 		}
 		> a {
+			font-weight: $fw-bold;
 			color: $black;
 			margin-bottom: 6px;
 		}
 		> p {
 			margin-block: 10px;
+		}
+		> div {
+			@include flex-center-ver;
+			gap: 6px;
+			color: $brow-light-75-color;
+			margin-top: 12px;
+			cursor: pointer;
 		}
 	}
 }
