--- a/src/scss/pages/_page-products.scss
+++ b/src/scss/pages/_page-products.scss
@@ -48,6 +48,7 @@
 	@include flex-column;
 	gap: 12px;
 	margin-bottom: 30px;
+	cursor: pointer;
 	@include breakpoint-down(smalldesktop) {
 		gap: 6px;
 		margin-bottom: 20px;
