--- a/src/scss/pages/_page-cart.scss
+++ b/src/scss/pages/_page-cart.scss
@@ -85,13 +85,18 @@
 	gap: 60px;
 	padding-bottom: 40px;
 	@include breakpoint-down(phone) {
-		gap: 40px;
+		gap: 20px;
 	}
 
 	> .image {
 		max-width: 230px;
 		min-width: 70px;
 		max-height: 306px;
+		@include breakpoint-down(phone) {
+			max-width: 120px;
+			min-width: 70px;
+			max-height: 200px;
+		}
 	}
 }
 
@@ -103,6 +108,9 @@
 		@include flex-column;
 		align-items: flex-start;
 		gap: 40px;
+	}
+	@include breakpoint-down(phone) {
+		gap: 20px;
 	}
 	.item-infor {
 		position: relative;
@@ -119,9 +127,19 @@
 			line-height: $leading-sm;
 			color: $brown-color;
 		}
-		> .name {
-			color: $black;
-			margin-bottom: 4px;
+		> .name-inner {
+			width: 400px;
+			@include breakpoint-down(phone) {
+				width: 100%;
+			}
+			cursor: pointer;
+			.name {
+				color: $black;
+				margin-bottom: 4px;
+				@include breakpoint-down(phone) {
+					font-size: $fz-sm;
+				}
+			}
 		}
 		> .color {
 			margin-bottom: 8px;
